--- a/client/css/Panels/Visualizer/VisualizerPanel.css
+++ b/client/css/Panels/Visualizer/VisualizerPanel.css
@@ -1,4 +1,6 @@
-.vis-loader {
+.visualizer-panel .vis-loader {
   display: inline-block;
   vertical-align: middle;
   margin-left: 7px; }
+.visualizer-panel > ul {
+  margin-bottom: 0; }
