--- a/client/css/Widgets/GraphViz/GraphVizWidget.css
+++ b/client/css/Widgets/GraphViz/GraphVizWidget.css
@@ -1,12 +1,14 @@
-.graph-viz .node {
-  cursor: pointer; }
-.graph-viz .node circle {
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 1.5px; }
-.graph-viz .node text {
-  font: 10px sans-serif; }
-.graph-viz .link {
-  fill: none;
-  stroke: #ccc;
-  stroke-width: 1.5px; }
+.graph-viz {
+  outline: none; }
+  .graph-viz .node {
+    cursor: pointer; }
+  .graph-viz .node circle {
+    fill: white;
+    stroke: steelblue;
+    stroke-width: 1.5px; }
+  .graph-viz .node text {
+    font: 10px sans-serif; }
+  .graph-viz .link {
+    fill: none;
+    stroke: #cccccc;
+    stroke-width: 1.5px; }
