--- a/client/scss/PanelBase/PanelBaseWithHeader.scss
+++ b/client/scss/PanelBase/PanelBaseWithHeader.scss
@@ -60,6 +60,11 @@ $sidepane-panel-border-radius: 4px;
           margin-left: 10px;
         }
       }
+
+      .iCheckBox {
+        top: 5px;
+        margin-left: 10px;
+      }
     }
   }
 
