ConnectionDrawingManager refactoring and bugfix

--- a/client/css/Decorators/DiagramDesigner/DefaultDecorator/DefaultDecorator.css
+++ b/client/css/Decorators/DiagramDesigner/DefaultDecorator/DefaultDecorator.css
@@ -26,8 +26,10 @@
       -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
       -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
-    .default-decorator .connector.connection-end-state-hover {
+    .default-decorator .connector.connection-end-accept {
       background-color: lime; }
+    .default-decorator .connector.connection-end-reject {
+      background-color: red; }
     .default-decorator .connector.top {
       top: -6px; }
     .default-decorator .connector.bottom {
