--- a/client/scss/Widgets/DiagramDesigner/_Connector.scss
+++ b/client/scss/Widgets/DiagramDesigner/_Connector.scss
@@ -5,7 +5,8 @@ $connector-size: 12px;
 $connector-hover-border-color: rgba(82, 168, 236, 0.8);
 $connector-hover-shadow-color-start: rgba(0, 0, 0, 0.075);
 $connector-hover-shadow-color-end: rgba(82, 168, 236, 0.6);
-$connection-end-state-hover-background-color: #00FF00;
+$connection-end-accept-background-color: #00FF00;
+$connection-end-reject-background-color: #FF0000;
 
 @mixin connector_basics {
   background-color: $connector-background-color;
@@ -22,7 +23,11 @@ $connection-end-state-hover-background-color: #00FF00;
     box-shadow: inset 0 1px 1px $connector-hover-shadow-color-start, 0 0 8px $connector-hover-shadow-color-end;
   }
 
-  &.connection-end-state-hover {
-    background-color: $connection-end-state-hover-background-color;
+  &.connection-end-accept {
+    background-color: $connection-end-accept-background-color;
+  }
+
+  &.connection-end-reject {
+    background-color: $connection-end-reject-background-color;
   }
 }
