--- a/client/css/Decorators/DiagramDesigner/DecoratorWithPorts/DecoratorWithPorts.css
+++ b/client/css/Decorators/DiagramDesigner/DecoratorWithPorts/DecoratorWithPorts.css
@@ -91,8 +91,10 @@
       -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
       -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
-    .decorator-with-ports .connector.connection-end-state-hover {
+    .decorator-with-ports .connector.connection-end-accept {
       background-color: lime; }
+    .decorator-with-ports .connector.connection-end-reject {
+      background-color: red; }
     .decorator-with-ports .connector.top {
       top: -6px; }
     .decorator-with-ports .connector.bottom {
