--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -1,4 +1,5 @@
 /* override default connector properties for draggable connector end */
+/*error decorator properties*/
 .diagram-designer {
   outline: none; }
   .diagram-designer .items {
@@ -52,6 +53,11 @@
         background-color: lime; }
       .diagram-designer .items .c-d-end.connection-end-reject {
         background-color: red; }
+    .diagram-designer .items .error-decorator {
+      background-color: #f2dede;
+      padding: 3px;
+      text-align: center;
+      border: 2px solid #000000; }
   .diagram-designer .dropRegion {
     width: 0;
     height: 0;
