--- a/client/decorators/ModelicaDecorator/PartBrowser/ModelicaDecorator.PartBrowserWidget.css
+++ b/client/decorators/ModelicaDecorator/PartBrowser/ModelicaDecorator.PartBrowserWidget.css
@@ -1,3 +1,10 @@
+/*
+ * Copyright (C) 2013 Vanderbilt University, All rights reserved.
+ *
+ * Authors:
+ * Zsolt Lattmann
+ * Robert Kereskenyi
+ */
 .part .modelica-decorator {
   text-align: center; }
   .part .modelica-decorator .name {
