--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -42,8 +42,13 @@
       position: absolute;
       cursor: pointer;
       border: 1px solid #883333;
-      margin-top: -7px;
-      margin-left: -7px; }
+      margin-top: -6px;
+      margin-left: -6px;
+      line-height: 10px;
+      font-size: 8px;
+      text-align: center;
+      font-weight: bold;
+      font-family: Verdana; }
       .diagram-designer .items .c-d-end:hover {
         border-color: rgba(255, 43, 43, 0.8);
         -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6);
@@ -54,11 +59,11 @@
       .diagram-designer .items .c-d-end.connection-end-reject {
         background-color: red; }
       .diagram-designer .items .c-d-end.src {
-        border-color: #FF0000;
-        border-width: 2px; }
+        border-color: red;
+        color: red; }
       .diagram-designer .items .c-d-end.dst {
-        border-color: #0000FF;
-        border-width: 2px; }
+        border-color: blue;
+        color: blue; }
     .diagram-designer .items .error-decorator {
       background-color: #f2dede;
       padding: 3px;
