css stlye update

--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -2,6 +2,7 @@
  * Copyright (C) 2013 Vanderbilt University, All rights reserved.
  *
  * Author: Robert Kereskenyi
+ *
  */
 /* override default connector properties for draggable connector end */
 /*error decorator properties*/
