--- a/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
+++ b/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
@@ -2,6 +2,7 @@
  * Copyright (C) 2013 Vanderbilt University, All rights reserved.
  *
  * Author: Robert Kereskenyi
+ *
  */
 
 @import "Connector";
