--- a/client/decorators/AttributesDecorator/DiagramDesigner/AttributesDecorator.DiagramDesignerWidget.scss
+++ b/client/decorators/AttributesDecorator/DiagramDesigner/AttributesDecorator.DiagramDesignerWidget.scss
@@ -6,7 +6,7 @@ $height: 40px;
 $border: 2px solid #000000;
 $padding: 3px;
 $background-color: #F5F5F5;
-$selected-background-color: #DBEAFC;
+$selected-background-color: lighten($background-color, 10);
 $selected-border: 2px solid #52A8EC;
 $attributes-background-color: rgba(255, 255, 0, 0.5);
 $attributes-add-new-hover-background-color: #DBEAFC;
