--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -4,7 +4,6 @@
  * Author: Robert Kereskenyi
  *
  */
-/* override default connector properties for draggable connector end */
 /*error decorator properties*/
 .diagram-designer {
   outline: none; }
@@ -21,16 +20,12 @@
       background: rgba(255, 255, 0, 0.1);
       border: black dashed 1px;
       position: absolute;
-      /*z-index: 1002;*/
       pointer-events: none;
       -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 8px rgba(0, 0, 0, 0.6);
       -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6); }
       .diagram-designer .items .selection-outline .s-btn {
         position: absolute;
-        /*z-index: 100000;*/
-        /*width: 26px;
-        height: 26px;*/
         background-color: white;
         border: 2px solid #000000;
         line-height: 14px;
@@ -44,13 +39,41 @@
         .diagram-designer .items .selection-outline .s-btn.delete {
           top: -13px;
           right: -13px; }
+    .diagram-designer .items .connection-connector.connector {
+      background-color: #fefefe;
+      height: 10px;
+      width: 10px;
+      position: absolute;
+      cursor: pointer;
+      border: 1px solid blue;
+      background-color: white;
+      border-radius: 12px;
+      margin-left: -6px;
+      margin-top: -6px; }
+      .diagram-designer .items .connection-connector.connector:hover {
+        border-color: rgba(82, 168, 236, 0.8);
+        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+        -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
+      .diagram-designer .items .connection-connector.connector.connection-end-accept {
+        background-color: lime; }
+      .diagram-designer .items .connection-connector.connector.connection-end-reject {
+        background-color: red; }
+    .diagram-designer .items .c-area {
+      position: absolute;
+      width: 8px;
+      height: 8px;
+      background-color: #000000;
+      border-radius: 4px;
+      margin-top: -4px;
+      margin-left: -4px; }
     .diagram-designer .items .c-d-end {
       background-color: #fefefe;
       height: 10px;
       width: 10px;
       position: absolute;
       cursor: pointer;
-      border: 1px solid #883333;
+      border: 1px solid blue;
       margin-top: -6px;
       margin-left: -6px;
       line-height: 10px;
@@ -59,10 +82,10 @@
       font-weight: bold;
       font-family: Verdana; }
       .diagram-designer .items .c-d-end:hover {
-        border-color: rgba(255, 43, 43, 0.8);
-        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6);
-        -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6);
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6); }
+        border-color: rgba(82, 168, 236, 0.8);
+        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+        -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
       .diagram-designer .items .c-d-end.connection-end-accept {
         background-color: lime; }
       .diagram-designer .items .c-d-end.connection-end-reject {
